Adapt code following Micronaut upgrade